# ma1

./: CMakeLists.txt  Makefile  README.md  Shell  commandInterpreter.c  commandInterpreter.h  main.c  readme.md  tempCodeRunnerFile.c
Help/: HelpCommand.c  HelpCommand.h  tempCodeRunnerFile.c
Pipe/: dualExec  dualExec.c  dualExec.h  testprint  testprint.c  testread  testread.c
Shell/: shell.c  shell.h
String/: Split.c  String.c  StringUtil.c  StringUtil.h
programs/: helloworld.c
